--- a/SearchEngine/SearchEngine.csproj
+++ b/SearchEngine/SearchEngine.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="System.ServiceModel.Security" Version="4.8.*" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
